[package]
name = "libkoompi"
version = "0.1.0"
authors = ["Ma veasna <maveasnalearntosolve@gmail>", "Hang leang <hangleang127@gmail>", "Aing sereyvathana <sereyvathana10@gmail>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = {version="0.9.2", features=['futures']}
getset = "0.1"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
udev = "0.6.0"
libmath = "0.2.1"
regex = "1.4"
dirs-next = "2.0"
ascii = "1.0.0"
log = "0.4.13"
itertools = "0.10"
libpulse-binding = {version = "2.23.0", features= ["pa_v5", "pa_v14"]}
titlecase = "1.1.0"
uuid = "0.8.1"
tokio = "1.0.1"
dbus-tokio = "0.7.3"
serde_derive = "1.0.118"
serde-xml-rs = "0.4.0"
thiserror = "1.0.23"
futures = "0.3.8"
bitflags = "1.2.1"
async-trait = "0.1.42"
[dev-dependencies]
eyre = "0.6.5"
pretty_env_logger = "0.4.0"
tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "time"] }
