[package]
name = "libkoompi"
version = "0.1.0"
authors = ["Ma veasna <maveasnalearntosolve@gmail>", "Hang leang <hangleang127@gmail>", "Aing sereyvathana <sereyvathana10@gmail>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.2"
getset = "0.1"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.6"
toml = "0.5.8"
udev = "0.6.0"
libmath = "0.2.1"
subprocess = "0.2.6"
regex = "1.4.5"
dirs-next = "2.0"
ascii = "1.0.0"
log = "0.4.13"
itertools = "0.10"
libpulse-binding = {version = "2.23.0", features= ["pa_v5", "pa_v14"]}
titlecase = "1.1.0"
lazy_static = "1.4.0"
thiserror = "1.0.24"
walkdir = "2.3.2"
mime_guess = "2.0.3"
version-compare = "0.0.11"
xdg-mime = "0.3.2"
configparser = "2.0.0"
freedesktop_entry_parser = "1.1.1"